# Trace2Policy

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: canonical_trace_schema.md  policy_dsl.md  redteam_mutations.md  roadmap.md  threat_model.md
examples/email_summarizer/: traces.normal.jsonl
examples/filesystem_agent/: traces.normal.jsonl
examples/github_issue_triage/: traces.normal.jsonl
src/trace2policy/: __init__.py  __main__.py  cli.py  conditions.py  graph.py  ingest.py  io.py  labels.py  models.py  policy.py  redact.py  redteam.py  rego.py  report.py
src/tracepolicykit/: __init__.py  __main__.py  cli.py  conditions.py  graph.py  ingest.py  io.py  labels.py  models.py  policy.py  redteam.py  rego.py  report.py
tests/: test_cli.py  test_pipeline.py
tests/fixtures/: langfuse_export.json  openinference_export.json
