[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "trace2policy"
version = "0.2.0"
description = "Convert AI agent traces into enforceable least-privilege policies."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Kukosai Yamae" }
]
keywords = [
  "ai-agents",
  "security",
  "policy",
  "opentelemetry",
  "mcp",
  "rego",
  "llmops"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "networkx>=3",
  "pydantic>=2",
  "pyyaml>=6",
  "rich>=13",
  "typer>=0.12"
]

[project.urls]
Homepage = "https://github.com/kungwansupS/Trace2Policy"
Repository = "https://github.com/kungwansupS/Trace2Policy"
Documentation = "https://github.com/kungwansupS/Trace2Policy#readme"
Issues = "https://github.com/kungwansupS/Trace2Policy/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "types-PyYAML>=6"
]
test = [
  "hypothesis>=6"
]

[project.scripts]
trace2policy = "trace2policy.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/trace2policy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
